🎉 디스코드 봇 기본 기능 구현

--- a/settings.ini
+++ b/settings.ini
@@ -1,3 +1,22 @@
 [OpenAI]
-OrganizationID=$OPENAI_ORGANIZATION_ID
-APIKey=$OPENAI_API_KEY
+OrganizationID = [YOUR ORGANIZATION ID]
+APIKey = [YOUR API KEY]
+
+[Parameters]
+EngineName = text-davinci-003
+Temperature = 0.7
+MaxTokens = 1024
+TopP = 1
+FrequencyPenalty = 0.0
+PresencePenalty = 0.6
+
+[Conversation]
+UserName = User
+AIName = AI
+PromptPath = ./prompt.txt
+
+[Discord]
+BotToken = [YOUR BOT TOKEN]
+
+[Servers]
+ServerGuild1 = [YOUR SERVER ID]
