✨ 임시 파일 캐시 경로 추가

--- a/settings.ini
+++ b/settings.ini
@@ -1,3 +1,6 @@
+[General]
+SettingsCachePath = ./settings_cache.yaml
+
 [OpenAI]
 OrganizationID = [YOUR ORGANIZATION ID]
 APIKey = [YOUR API KEY]
@@ -14,6 +17,7 @@ PresencePenalty = 0.6
 UserName = User
 AIName = AI
 PromptPath = ./prompt.txt
+PromptHistoryPath = ./prompt_history.txt
 
 [Discord]
 BotToken = [YOUR BOT TOKEN]
