✨ 봇 기본 기능 구현

--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,5 @@
 [General]
-SettingsCachePath = ./settings_cache.yaml
+SettingsCachePath = ./temp/settings_cache.json
 
 [OpenAI]
 OrganizationID = [YOUR ORGANIZATION ID]
@@ -7,20 +7,22 @@ APIKey = [YOUR API KEY]
 
 [Parameters]
 EngineName = text-davinci-003
-Temperature = 0.7
 MaxTokens = 1024
 TopP = 1
 FrequencyPenalty = 0.0
 PresencePenalty = 0.6
 
 [Conversation]
-UserName = User
-AIName = AI
-PromptPath = ./prompt.txt
-PromptHistoryPath = ./prompt_history.txt
+DefaultPromptPath = ./prompt.txt
+PromptHistoryPath = ./temp/prompt_history.txt
 
 [Discord]
 BotToken = [YOUR BOT TOKEN]
 
 [Servers]
 ServerGuild1 = [YOUR SERVER ID]
+
+[Default]
+UserName = User
+AIName = AI
+Creativity = 3
