✨ 봇 기본 기능 구현

--- a/settings.ini
+++ b/settings.ini
@@ -1,20 +1,18 @@
-[General]
+[Environment]
 SettingsCachePath = ./temp/settings_cache.json
+DefaultPromptPath = ./prompt.txt
+PromptHistoryPath = ./temp/prompt_history.txt
 
 [OpenAI]
 OrganizationID = [YOUR ORGANIZATION ID]
 APIKey = [YOUR API KEY]
 
-[Parameters]
+[OpenAI.Parameters]
 EngineName = text-davinci-003
 MaxTokens = 1024
 TopP = 1
 FrequencyPenalty = 0.0
 PresencePenalty = 0.6
-
-[Conversation]
-DefaultPromptPath = ./prompt.txt
-PromptHistoryPath = ./temp/prompt_history.txt
 
 [Discord]
 BotToken = [YOUR BOT TOKEN]
