--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,11 @@
 [Environment]
-SettingsCachePath = ./temp/settings_cache.json
 DefaultPromptPath = ./prompt.txt
-PromptHistoryPath = ./temp/prompt_history.txt
+CachePath = ./temp/
+
+[Environment.Cache]
+SessionListName = sessions.txt
+SettingsCacheName = settings_{0}.json
+PromptHistoryName = prompt_{0}.txt
 
 [OpenAI]
 OrganizationID = [YOUR ORGANIZATION ID]
