✨ 다중 세션 및 롤링 프롬프트 지원 추가

--- a/settings.ini
+++ b/settings.ini
@@ -4,16 +4,18 @@ CachePath = ./temp/
 
 [Environment.Cache]
 SessionListName = sessions.txt
-SettingsCacheName = settings_{0}.json
-PromptHistoryName = prompt_{0}.txt
+SettingsName = settings_{0}.json
+PromptName = prompt_{0}.txt
+HistoryName = history_{0}.txt
 
 [OpenAI]
 OrganizationID = [YOUR ORGANIZATION ID]
 APIKey = [YOUR API KEY]
 
 [OpenAI.Parameters]
+ScrollAmount = 6
 EngineName = text-davinci-003
-MaxTokens = 1024
+MaxTokens = 512
 TopP = 1
 FrequencyPenalty = 0.0
 PresencePenalty = 0.6
