🎨 SessionCache 가독성 향상

--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@ DefaultPromptPath = ./prompt.txt
 CachePath = ./temp/
 
 [Environment.Cache]
-SessionListName = sessions.txt
+SessionsListName = sessions.txt
 SettingsName = settings_{0}.json
 PromptName = prompt_{0}.txt
 HistoryName = history_{0}.txt
