✨ settings.ini 구조 업데이트

--- a/settings.ini
+++ b/settings.ini
@@ -22,10 +22,5 @@ PresencePenalty = 0.6
 [Discord]
 BotToken = [YOUR BOT TOKEN]
 
-[Servers]
+[Discord.Servers]
 ServerGuild1 = [YOUR SERVER ID]
-
-[Default]
-UserName = User
-AIName = AI
-Creativity = 3
