🎨 세팅 구조 변경

--- a/settings.ini
+++ b/settings.ini
@@ -1,26 +1,14 @@
 [Environment]
-DefaultPromptPath = ./prompt.txt
-CachePath = ./temp/
+DEFAULT_PROMPT_PATH: ./data/prompt.txt
+PROMPT_MODEL_PATH: ./data/prompt.yaml
+CONVERSATION_MODEL_PATH = ./data/conversation.yaml
+CACHE_PATH = ./cache/
 
-[Environment.Cache]
-SessionsListName = sessions.txt
-SettingsName = settings_{0}.json
-HistoryName = history_{0}.txt
+[Tokens]
+OPEN_AI_ORGANIZATION_ID = [OPEN_AI_ORGANIZATION_ID]
+OPEN_AI_API_KEY = [OPEN_AI_API_KEY]
+DISCORD_BOT_TOKEN = [DISCORD_BOT_TOKEN]
 
-[OpenAI]
-OrganizationID = [YOUR ORGANIZATION ID]
-APIKey = [YOUR API KEY]
-
-[OpenAI.Parameters]
-ScrollAmount = 6
-EngineName = text-davinci-003
-MaxTokens = 512
-TopP = 1
-FrequencyPenalty = 0.0
-PresencePenalty = 0.6
-
-[Discord]
-BotToken = [YOUR BOT TOKEN]
-
-[Discord.Servers]
-ServerGuild1 = [YOUR SERVER ID]
+[Servers]
+SERVER_GUILD_1 = [SERVER_GUILD_1]
+SERVER_GUILD_2 = [SERVER_GUILD_2]
