🎨 캐시 경로 수정

--- a/settings.ini
+++ b/settings.ini
@@ -2,7 +2,7 @@
 DEFAULT_PROMPT_PATH: ./data/prompt.txt
 PROMPT_MODEL_PATH: ./data/prompt.yaml
 CONVERSATION_MODEL_PATH = ./data/conversation.yaml
-CACHE_PATH = ./cache/
+CACHE_PATH = ./.cache/
 
 [Tokens]
 OPEN_AI_ORGANIZATION_ID = [OPEN_AI_ORGANIZATION_ID]
