--- a/.gitignore
+++ b/.gitignore
@@ -289,5 +289,5 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm
 
 # AIGF
-settings.ini
+config.ini
 .cache/
